--- a/markdown/css/extra.css
+++ b/markdown/css/extra.css
@@ -98,3 +98,13 @@ h1, h2, .drawer .section {
     background-size: cover;
     background-position: center center;
 }
+
+.commerce-icon {
+    display: block;
+    width: 800px;
+    height: 200px;
+    margin-left: calc(50% - 400px);
+    background-image: url('../img/grafite_commerce.png');
+    background-size: cover;
+    background-position: center center;
+}
