--- a/markdown/css/extra.css
+++ b/markdown/css/extra.css
@@ -108,3 +108,24 @@ h1, h2, .drawer .section {
     background-size: cover;
     background-position: center center;
 }
+
+.carbon-container {
+    width: 190px;
+    height: 160px;
+    margin-left: 16px;
+    margin-bottom: 16px;
+}
+
+.carbon-image {
+    width: 180px;
+    height: 100px;
+    float: left;
+    background-color: #333;
+}
+
+.carbon-text {
+    width: 180px;
+    height: 60px;
+    float: left;
+    margin-top: 8px;
+}
